--- a/inventory.yml
+++ b/inventory.yml
@@ -1,10 +1,15 @@
 all:
-  hosts:
-    webserver:
-      ansible_host: 172.20.10.
-    database_server:
-      ansible_host: 172.20.10.
-      msqlserver-id: 1
-    database_replicat:
-      ansible_host: 172.20.10.
-      mysqlserver-id: 2
+  children:
+    webservers:
+      hosts:
+        webserver1:
+          ansible_host: 172.20.10.11
+        webserver2:
+          ansible_host: 172.20.10.9
+    dbservers:
+      hosts:
+        mysqlserver1:
+          ansible_host: 172.20.10.6
+        mysqlreplicat:
+          ansible_host: 172.20.10.10
+
