--- a/apache2/install_apache2V2.yml
+++ b/apache2/install_apache2V2.yml
@@ -26,8 +26,8 @@
 
     # Configuration VirtualHosts Apache
     apache_vhosts:
-      - servername: "172.20.10.11"           # Remplacez par l'adresse IP de votre serveur si différente
-        document_root: "/var/www/wordpress"   # Doit correspondre au pre_task
+      - servername: "{{ ansible_default_ipv4.address }}" # Recup ip auto
+        document_root: "/var/www/wordpress"              # Doit correspondre au pre_task
         access_log: "/var/log/apache2/wordpress_access.log"
         error_log: "/var/log/apache2/wordpress_error.log"
         extra_parameters: |
