modification du hosts: webserver -> webservers

--- a/apache2/install_apache2V2.yml
+++ b/apache2/install_apache2V2.yml
@@ -1,5 +1,5 @@
 - name: Préparer l'environnement Apache pour héberger WordPress
-  hosts: webserver
+  hosts: webservers
   become: yes
 
   # Préparations de l'environnement
