--- a/inventory.yml
+++ b/inventory.yml
@@ -5,15 +5,30 @@ all:
         webserver1:
           ansible_host: 172.16.202.23
           ansible_user: esiee
+          vars:
+            client_users:
+              -client1
+              -client3
         webserver2:
           ansible_host: 172.16.202.28
           ansible_user: esiee
+          vars:
+            client_users:
+              -client2
+              -client4
     dbservers:
       hosts:
         mysqlserver1:
           ansible_host: 172.16.202.27
           ansible_user: esiee
+          vars:
+            client_users:
+              -client1
+              -client3
         mysqlreplicat:
           ansible_host: 172.16.202.24
           aisible_user: esiee
-
+          vars:
+            client_users:
+              -client2
+              -client4
