--- a/inventory.yml
+++ b/inventory.yml
@@ -38,7 +38,7 @@ all:
         mysqlreplicat:
           ansible_host: 172.16.202.24
           aisible_user: esiee
-    backupserver:
+    backupservers:
       hosts:
         backupserver:
           ansible_host: 172.16.202.26
