--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,10 +1,40 @@
 mysql_root_password: super-secure-password
+
 mysql_databases:
-  - name: database1_db
+  - name: client1_db
     encoding: latin1
     collation: latin1_general_ci
+  - name: client2_db
+    encoding: latin1
+    collation: latin1_general_ci
+  - name: client3_db
+    encoding: latin1
+    collation: latin1_general_ci
+  - name: client4_db
+    encoding: latin1
+    collation: latin1_general_ci
+
 mysql_users:
-  - name: josselin
-    host: mysqlserver1
+  - name: client1
+    host: "mysqlserver1"
     password: similarly-secure-password
-    priv: "database1_db.*:ALL"
+    priv: "client1_db.*:ALL"
+  - name: client2
+    host: "mysqlserver1"
+    password: similarly-secure-password
+    priv: "client2_db.*:ALL"
+  - name: client3
+    host: "mysqlserver1"
+    password: similarly-secure-password
+    priv: "client3_db.*:ALL"
+  - name: client4
+    host: "mysqlserver1"
+    password: similarly-secure-password
+    priv: "client4_db.*:ALL"
+
+mysql_replication_role: "master"
+mysql_enable_binlog: true
+mysql_log_bin: "/var/log/mysql/mysql-bin.log"
+mysql_binlog_format: "mixed"
+mysql_server_id: 1
+mysql_replication_ignore_db: []
