--- a/inventory.yml
+++ b/inventory.yml
@@ -24,6 +24,8 @@ all:
         mysqlserver1:
           ansible_host: 172.16.202.27
           ansible_user: esiee
+          mysql_server_id: "1"
+          mysql_replication_role: "master"
           client_users:
             - name: client1
               password: esiee
@@ -36,6 +38,8 @@ all:
         mysqlreplicat:
           ansible_host: 172.16.202.24
           ansible_user: esiee
+          mysql_server_id: "2"
+          mysql_replication_role: "slave"
 
     backupservers:
       hosts:
