--- a/playbook_System.yml
+++ b/playbook_System.yml
@@ -25,7 +25,7 @@
     - name: Add esieeadmin to sudoers with no password (module sudoers)
       community.general.sudoers:
         name: testadmin     # Nom du fichier sudoers généré (/etc/sudoers.d/esieeadmin)
-        user: testeadmin     # Utilisateur à qui on accorde les droits sudo
+        user: testadmin     # Utilisateur à qui on accorde les droits sudo
         runas: ALL           # L'utilisateur peut exécuter des commandes en tant que n'importe quel utilisateur
         commands: ALL        # L'utilisateur peut exécuter toutes les commandes via sudo
         nopassword: true     # Ne demande pas de mot de passe pour utiliser sudo
