--- a/inventory.yml
+++ b/inventory.yml
@@ -10,6 +10,8 @@ all:
               password: esiee
             - name: client3
               password: esiee
+            - name: client5
+              password: esiee
         webserver2:
           ansible_host: 172.16.210.36
           ansible_user: esiee
